cloud-platform-helloworld-ruby-app-gitops/kubectl_deploy/cloud-platform-deploy/cp-dummy-gitops-dev/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-rubyapp
  namespace: cp-dummy-gitops-dev
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: helloworld-rubyapp
    spec:
      containers:
      - name: rubyapp
        image: ministryofjustice/cloud-platform-helloworld-ruby
        ports:
        - containerPort: 4567
