cloud-platform-helloworld-ruby-app-gitops/kubectl_deploy/cloud-platform-deploy/cp-dummy-gitops-dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rubyapp-ingress
  namespace: cp-dummy-gitops-dev
spec:
  tls:
  - hosts:
    - cp-dummy-gitops-dev.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: cp-dummy-gitops-dev.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rubyapp-service
          servicePort: 4567
